login / get info with jwt token

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,10 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
